removed unused library

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,9 @@ dist.jar=${dist.dir}/tnt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.tikal.jar=/home/olof/Downloads/doctest/okapi-apps_gtk2-linux-x86_64_0.36/lib/tikal.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.tikal.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
