--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/tnt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.rainbow.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/rainbow.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.rainbow.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
