--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.okapi-lib-0.37.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/okapi-lib-0.37.jar
+file.reference.okapi-lib-xliff2-1.1.9.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/okapi-lib-xliff2-1.1.9.jar
 file.reference.rainbow.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/rainbow.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.rainbow.jar}:\
-    ${file.reference.okapi-lib-0.37.jar}
+    ${file.reference.okapi-lib-0.37.jar}:\
+    ${file.reference.okapi-lib-xliff2-1.1.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
