--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,15 +29,39 @@ dist.jar=${dist.dir}/tnt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.common-io-3.3.2.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/common-io-3.3.2.jar
+file.reference.flexmark-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-0.32.24.jar
+file.reference.flexmark-ext-gfm-strikethrough-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-ext-gfm-strikethrough-0.32.24.jar
+file.reference.flexmark-ext-tables-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-ext-tables-0.32.24.jar
+file.reference.flexmark-ext-yaml-front-matter-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-ext-yaml-front-matter-0.32.24.jar
+file.reference.flexmark-formatter-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-formatter-0.32.24.jar
+file.reference.flexmark-util-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-util-0.32.24.jar
+file.reference.icu4j-62.1.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/icu4j-62.1.jar
+file.reference.jericho-html-3.4.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/jericho-html-3.4.jar
 file.reference.okapi-lib-0.37.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/okapi-lib-0.37.jar
 file.reference.okapi-lib-xliff2-1.1.9.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/okapi-lib-xliff2-1.1.9.jar
 file.reference.rainbow.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/rainbow.jar
+file.reference.slf4j-api-1.7.25.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/slf4j-api-1.7.25.jar
+file.reference.slf4j-jdk14-1.7.25.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/logger/slf4j-jdk14-1.7.25.jar
+file.reference.snakeyaml-1.21.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/snakeyaml-1.21.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.rainbow.jar}:\
     ${file.reference.okapi-lib-0.37.jar}:\
-    ${file.reference.okapi-lib-xliff2-1.1.9.jar}
+    ${file.reference.okapi-lib-xliff2-1.1.9.jar}:\
+    ${file.reference.slf4j-api-1.7.25.jar}:\
+    ${file.reference.icu4j-62.1.jar}:\
+    ${file.reference.snakeyaml-1.21.jar}:\
+    ${file.reference.jericho-html-3.4.jar}:\
+    ${file.reference.flexmark-0.32.24.jar}:\
+    ${file.reference.flexmark-util-0.32.24.jar}:\
+    ${file.reference.flexmark-ext-gfm-strikethrough-0.32.24.jar}:\
+    ${file.reference.flexmark-ext-tables-0.32.24.jar}:\
+    ${file.reference.flexmark-formatter-0.32.24.jar}:\
+    ${file.reference.flexmark-ext-yaml-front-matter-0.32.24.jar}:\
+    ${file.reference.slf4j-jdk14-1.7.25.jar}:\
+    ${file.reference.common-io-3.3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
