--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=tnt
+application.title=tntsrc
 application.vendor=olof
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -19,65 +19,47 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/tnt.jar
+dist.jar=${dist.dir}/tntsrc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+dist.jlink.dir=${dist.dir}/jlink
+dist.jlink.output=${dist.jlink.dir}/tntsrc
 endorsed.classpath=
 excludes=
-file.reference.common-io-3.3.2.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/common-io-3.3.2.jar
-file.reference.flexmark-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-0.32.24.jar
-file.reference.flexmark-ext-gfm-strikethrough-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-ext-gfm-strikethrough-0.32.24.jar
-file.reference.flexmark-ext-tables-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-ext-tables-0.32.24.jar
-file.reference.flexmark-ext-yaml-front-matter-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-ext-yaml-front-matter-0.32.24.jar
-file.reference.flexmark-formatter-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-formatter-0.32.24.jar
-file.reference.flexmark-util-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-util-0.32.24.jar
-file.reference.icu4j-62.1.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/icu4j-62.1.jar
-file.reference.jericho-html-3.4.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/jericho-html-3.4.jar
-file.reference.okapi-lib-0.37.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/okapi-lib-0.37.jar
-file.reference.okapi-lib-xliff2-1.1.9.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/okapi-lib-xliff2-1.1.9.jar
-file.reference.rainbow.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/rainbow.jar
-file.reference.slf4j-api-1.7.25.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/slf4j-api-1.7.25.jar
-file.reference.slf4j-jdk14-1.7.25.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/logger/slf4j-jdk14-1.7.25.jar
-file.reference.snakeyaml-1.21.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/snakeyaml-1.21.jar
+file.reference.tnt-src=src
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.rainbow.jar}:\
-    ${file.reference.okapi-lib-0.37.jar}:\
-    ${file.reference.okapi-lib-xliff2-1.1.9.jar}:\
-    ${file.reference.slf4j-api-1.7.25.jar}:\
-    ${file.reference.icu4j-62.1.jar}:\
-    ${file.reference.snakeyaml-1.21.jar}:\
-    ${file.reference.jericho-html-3.4.jar}:\
-    ${file.reference.flexmark-0.32.24.jar}:\
-    ${file.reference.flexmark-util-0.32.24.jar}:\
-    ${file.reference.flexmark-ext-gfm-strikethrough-0.32.24.jar}:\
-    ${file.reference.flexmark-ext-tables-0.32.24.jar}:\
-    ${file.reference.flexmark-formatter-0.32.24.jar}:\
-    ${file.reference.flexmark-ext-yaml-front-matter-0.32.24.jar}:\
-    ${file.reference.slf4j-jdk14-1.7.25.jar}:\
-    ${file.reference.common-io-3.3.2.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=11
+javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -86,6 +68,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+# The jlink additional root modules to resolve
+jlink.additionalmodules=
+# The jlink additional command line parameters
+jlink.additionalparam=
+jlink.launcher=true
+jlink.launcher.name=tntsrc
 main.class=editor.Application
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -98,9 +86,12 @@ run.classpath=\
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+src.dir=${file.reference.tnt-src}
