--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/tntsrc
 endorsed.classpath=
 excludes=
+file.reference.dtd.jar=OpenXLIFF/lib/dtd.jar
+file.reference.json.jar=OpenXLIFF/lib/json.jar
+file.reference.jsoup-1.11.3.jar=OpenXLIFF/lib/jsoup-1.11.3.jar
 file.reference.tnt-src=src
+file.reference.xlifffilters.jar=OpenXLIFF/lib/xlifffilters.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -43,7 +47,11 @@ javac.classpath=
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
+javac.modulepath=\
+    ${file.reference.dtd.jar}:\
+    ${file.reference.json.jar}:\
+    ${file.reference.jsoup-1.11.3.jar}:\
+    ${file.reference.xlifffilters.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
@@ -94,4 +102,5 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
+source.reference.xlifffilters.jar=OpenXLIFF/lib/xlifffilters.jar
 src.dir=${file.reference.tnt-src}
