--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,8 +36,10 @@ file.reference.flexmark-ext-tables-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86
 file.reference.flexmark-ext-yaml-front-matter-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-ext-yaml-front-matter-0.32.24.jar
 file.reference.flexmark-formatter-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-formatter-0.32.24.jar
 file.reference.flexmark-util-0.32.24.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/flexmark-util-0.32.24.jar
+file.reference.hunspell-1.6.2-SNAPSHOT.jar=lib/dev/hunspell-1.6.2-SNAPSHOT.jar
 file.reference.icu4j-62.1.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/icu4j-62.1.jar
 file.reference.jericho-html-3.4.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/jericho-html-3.4.jar
+file.reference.jna.jar=HunspellJNA/lib/jna.jar
 file.reference.okapi-lib-0.37.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/okapi-lib-0.37.jar
 file.reference.okapi-lib-xliff2-1.1.9.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/okapi-lib-xliff2-1.1.9.jar
 file.reference.rainbow.jar=lib/dev/okapi-apps_gtk2-linux-x86_64_0.37/lib/rainbow.jar
@@ -61,7 +63,9 @@ javac.classpath=\
     ${file.reference.flexmark-formatter-0.32.24.jar}:\
     ${file.reference.flexmark-ext-yaml-front-matter-0.32.24.jar}:\
     ${file.reference.slf4j-jdk14-1.7.25.jar}:\
-    ${file.reference.common-io-3.3.2.jar}
+    ${file.reference.common-io-3.3.2.jar}:\
+    ${file.reference.jna.jar}:\
+    ${file.reference.hunspell-1.6.2-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -102,5 +106,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.hunspell-1.6.2-SNAPSHOT.jar=lib/dev/hunspell-1.6.2-SNAPSHOT-sources.jar
 src.dir=src
 test.src.dir=test
