updated OpenXLIFF Merge.merge error handling

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -107,5 +107,5 @@ run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
 source.reference.hunspell-1.6.2-SNAPSHOT.jar=lib/dev/hunspell-1.6.2-SNAPSHOT-sources.jar
-source.reference.xlifffilters.jar=OpenXLIFF/lib/xlifffilters.jar
+source.reference.xlifffilters.jar=OpenXLIFF/src
 src.dir=${file.reference.tnt-src}
