--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/tntsrc
 endorsed.classpath=
 excludes=
 file.reference.dtd.jar=OpenXLIFF/lib/dtd.jar
-file.reference.hunspell-1.6.2-SNAPSHOT.jar=lib/dev/hunspell-1.6.2-SNAPSHOT.jar
+file.reference.hunspell-1.6.2-SNAPSHOT.jar=HunspellJNA/build/jar/hunspell-1.6.2-SNAPSHOT.jar
 file.reference.jna.jar=HunspellJNA/lib/jna.jar
 file.reference.json.jar=OpenXLIFF/lib/json.jar
 file.reference.jsoup-1.11.3.jar=OpenXLIFF/lib/jsoup-1.11.3.jar
@@ -54,8 +54,8 @@ javac.modulepath=\
     ${file.reference.json.jar}:\
     ${file.reference.jsoup-1.11.3.jar}:\
     ${file.reference.xlifffilters.jar}:\
-    ${file.reference.hunspell-1.6.2-SNAPSHOT.jar}:\
-    ${file.reference.jna.jar}
+    ${file.reference.jna.jar}:\
+    ${file.reference.hunspell-1.6.2-SNAPSHOT.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
@@ -106,6 +106,6 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
-source.reference.hunspell-1.6.2-SNAPSHOT.jar=lib/dev/hunspell-1.6.2-SNAPSHOT-sources.jar
+source.reference.hunspell-1.6.2-SNAPSHOT.jar=HunspellJNA/build/jar/hunspell-1.6.2-SNAPSHOT-sources.jar
 source.reference.xlifffilters.jar=OpenXLIFF/src
 src.dir=${file.reference.tnt-src}
