--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=tntsrc
+application.title=tnt
 application.vendor=olof
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/tntsrc.jar
+dist.jar=${dist.dir}/tnt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/tntsrc
+dist.jlink.output=${dist.jlink.dir}/tnt
 endorsed.classpath=
 excludes=
 file.reference.dtd.jar=OpenXLIFF/lib/dtd.jar
@@ -85,7 +85,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=tntsrc
+jlink.launcher.name=tnt
 main.class=editor.Application
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
