--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,8 +40,9 @@ file.reference.hunspell-1.6.2-SNAPSHOT.jar=HunspellJNA/build/jar/hunspell-1.6.2-
 file.reference.jna.jar=HunspellJNA/lib/jna.jar
 file.reference.json.jar=OpenXLIFF/lib/json.jar
 file.reference.jsoup-1.11.3.jar=OpenXLIFF/lib/jsoup-1.11.3.jar
+file.reference.mapdb.jar=OpenXLIFF/lib/mapdb.jar
+file.reference.openxliff.jar=OpenXLIFF/lib/openxliff.jar
 file.reference.tnt-src=src
-file.reference.xlifffilters.jar=OpenXLIFF/lib/xlifffilters.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -53,9 +54,10 @@ javac.modulepath=\
     ${file.reference.dtd.jar}:\
     ${file.reference.json.jar}:\
     ${file.reference.jsoup-1.11.3.jar}:\
-    ${file.reference.xlifffilters.jar}:\
+    ${file.reference.openxliff.jar}:\
     ${file.reference.jna.jar}:\
-    ${file.reference.hunspell-1.6.2-SNAPSHOT.jar}
+    ${file.reference.hunspell-1.6.2-SNAPSHOT.jar}:\
+    ${file.reference.mapdb.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
@@ -107,5 +109,5 @@ run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
 source.reference.hunspell-1.6.2-SNAPSHOT.jar=HunspellJNA/build/jar/hunspell-1.6.2-SNAPSHOT-sources.jar
-source.reference.xlifffilters.jar=OpenXLIFF/src
+source.reference.openxliff.jar=OpenXLIFF/src
 src.dir=${file.reference.tnt-src}
