--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "OpenXLIFF"]
 	path = OpenXLIFF
 	url = https://github.com/rmraya/OpenXLIFF.git
+[submodule "dictionaries"]
+	path = dictionaries
+	url = https://github.com/LibreOffice/dictionaries.git
 [submodule "HunspellJNA"]
 	path = HunspellJNA
 	url = https://github.com/dren-dk/HunspellJNA.git
