added qc unit tests

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -57,7 +57,9 @@ javac.modulepath=\
     ${file.reference.openxliff.jar}:\
     ${file.reference.jna.jar}:\
     ${file.reference.mapdb.jar}:\
-    ${file.reference.hunspell-1.6.2-SNAPSHOT.jar}
+    ${file.reference.hunspell-1.6.2-SNAPSHOT.jar}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
@@ -111,3 +113,4 @@ source.encoding=UTF-8
 source.reference.hunspell-1.6.2-SNAPSHOT.jar=tnt-artifacts/hunspell-1.6.2-SNAPSHOT-sources.jar
 source.reference.openxliff.jar=OpenXLIFF/src
 src.dir=${file.reference.tnt-src}
+src.test.dir=test
