--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,6 @@ file.reference.json.jar=OpenXLIFF/lib/json.jar
 file.reference.jsoup-1.11.3.jar=OpenXLIFF/lib/jsoup-1.11.3.jar
 file.reference.mapdb.jar=OpenXLIFF/lib/mapdb.jar
 file.reference.openxliff.jar=OpenXLIFF/lib/openxliff.jar
-file.reference.tnt-src=src
 includes=**
 jar.compress=false
 javac.classpath=
@@ -112,5 +111,5 @@ run.test.modulepath=\
 source.encoding=UTF-8
 source.reference.hunspell-1.6.2-SNAPSHOT.jar=tnt-artifacts/hunspell-1.6.2-SNAPSHOT-sources.jar
 source.reference.openxliff.jar=OpenXLIFF/src
-src.dir=${file.reference.tnt-src}
-src.test.dir=test
+src.java.dir=src/main/java
+src.java2.dir=src/test/java
