removed libs and submodules

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,6 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/tnt2
 endorsed.classpath=
 excludes=
-file.reference.dtd.jar=OpenXLIFF/lib/dtd.jar
-file.reference.hunspell-1.6.2-SNAPSHOT.jar=tnt-artifacts/hunspell-1.6.2-SNAPSHOT.jar
-file.reference.jna.jar=HunspellJNA/lib/jna.jar
-file.reference.json.jar=OpenXLIFF/lib/json.jar
-file.reference.jsoup-1.11.3.jar=OpenXLIFF/lib/jsoup-1.11.3.jar
-file.reference.mapdb.jar=OpenXLIFF/lib/mapdb.jar
-file.reference.openxliff.jar=OpenXLIFF/lib/openxliff.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -49,16 +42,7 @@ javac.classpath=
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=\
-    ${file.reference.dtd.jar}:\
-    ${file.reference.json.jar}:\
-    ${file.reference.jsoup-1.11.3.jar}:\
-    ${file.reference.openxliff.jar}:\
-    ${file.reference.jna.jar}:\
-    ${file.reference.mapdb.jar}:\
-    ${file.reference.hunspell-1.6.2-SNAPSHOT.jar}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
@@ -109,7 +93,5 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
-source.reference.hunspell-1.6.2-SNAPSHOT.jar=tnt-artifacts/hunspell-1.6.2-SNAPSHOT-sources.jar
-source.reference.openxliff.jar=OpenXLIFF/src
 src.java.dir=src/main/java
 src.java2.dir=src/test/java
