--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,7 @@ file.reference.dtd.jar=OpenXLIFF/lib/dtd.jar
 file.reference.hunspell-1.6.2-SNAPSHOT.jar=tnt-artifacts/hunspell-1.6.2-SNAPSHOT.jar
 file.reference.jna.jar=HunspellJNA/lib/jna.jar
 file.reference.json.jar=OpenXLIFF/lib/json.jar
-file.reference.jsoup-1.11.3.jar=OpenXLIFF/lib/jsoup-1.11.3.jar
+file.reference.jsoup.jar=OpenXLIFF/lib/jsoup.jar
 file.reference.mapdb.jar=OpenXLIFF/lib/mapdb.jar
 file.reference.openxliff.jar=OpenXLIFF/lib/openxliff.jar
 includes=**
@@ -52,7 +52,7 @@ javac.external.vm=true
 javac.modulepath=\
     ${file.reference.dtd.jar}:\
     ${file.reference.json.jar}:\
-    ${file.reference.jsoup-1.11.3.jar}:\
+    ${file.reference.jsoup.jar}:\
     ${file.reference.openxliff.jar}:\
     ${file.reference.jna.jar}:\
     ${file.reference.mapdb.jar}:\
